# mineclaw

./: .gitignore  Cargo.toml  DEBUG_TEST_GUIDE.md  MANUAL_CURL_TEST.md  PHASE2.md  PHASE2_7_RUST_TERMINAL.md  PHASE3_plan.md  README.md  RFC_API_KEY_ENCRYPTION.md  TERMINAL_COMPATIBILITY_ANALYSIS.md  TEST_PLAN_CONFIG_API.md  package.json  requirements.txt  terminal-mcp-server.js  test-mcp-server.js  test_rust_server.py
config/: mineclaw_template.toml
docs/: AGENTFS_GUIDE.md  CLAW_DEFINITION.md  PHASE1.md  PHASE2.md  PHASE3_inprogress.md  PHASE4_planning.md  PLAN.md
docs/work_orders/: DevLog_Terminal_Module.docx  SECURITY_IMPLEMENTATION_REPORT.md  TEST_REPORT_CONFIG_API.md  TEST_REPORT_MANUAL.md  WORK_ORDER_CONFIG_UPDATE.md  WorkOrder_Terminal_Module.docx
src/: config.rs  encryption.rs  error.rs  lib.rs  main.rs  security.rs  state.rs  tool_coordinator.rs
src/agent/: builder.rs  mod.rs  types.rs  work_order.rs
src/api/: handlers.rs  routes.rs  sse.rs
src/checkpoint/: error.rs  manager.rs  mod.rs
src/mcp/: client.rs  registry.rs  server.rs  transport.rs
src/models/: checkpoint.rs  message.rs  mod.rs
src/tools/: checkpoint.rs  filesystem.rs  mod.rs  registry.rs
tests/: checkpoint_tests.rs  config_encryption_test.rs  encryption_security_tests.rs  encryption_tests.rs  filesystem_tests.rs  mcp_integration.rs  test_parse_blocks.rs
参考配置/: mineclaw.toml
工单/: MineClaw_Config_API_Test_Report.docx  MineClaw_Config_Update_WorkOrder.docx  MineClaw_Manual_Test_Report.docx  MineClaw_Security_Implementation_Report.docx
