[package]
name = "mineclaw"
version = "0.1.0"
edition = "2024"

[lib]
name = "mineclaw"
path = "src/lib.rs"

[[bin]]
name = "mineclaw"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
toml = "1.0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
async-trait = "0.1"
dirs = "6.0.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
validator = "0.20.0"
tokio-process = "0.2.5"
futures-util = "0.3.31"
async-stream = "0.3"
aes-gcm = "0.10.3"
rand = "0.10.0"
base64 = "0.22.1"
portable-pty = "0.9.0"
